# ResearchLoop

./: .gitignore  .mcp.json.example  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  README.zh-CN.md  harness.yaml  pyproject.toml
.github/workflows/: ci.yml
decisions/: 20260707_visual_to_editable_asset_router.md
design/explorations/mycevo-diagrams/: README.md
docs/design/: mycevo-diagram-redesign-brief.md
examples/visual_to_editable_minimal/: README.md  expected_route.yaml  figure_card.md  reproduction_entry.md  request.yaml  visual_reconstruction_manifest.yaml  visual_reconstruction_prompt.md  visual_reconstruction_qa.md
mcp/: README.md  mycevo_mcp.py  research_harness_mcp.py  resevo_mcp.py
registry/: decisions.yaml  figures.yaml  visual_to_editable_skills.yaml
scripts/: _harness_common.py  evaluator.py  registry_tool.py  visual_to_editable_router.py
src/mycevo/: __init__.py  cli.py  compat.py  core.py  evolution.py  mcp_installer.py  provenance.py  services.py
src/researchloop/: __init__.py  cli.py
src/resevo/: __init__.py  cli.py  core.py  mcp_installer.py  mcp_server.py  provenance.py  services.py
templates/: visual_reconstruction_manifest.yaml  visual_reconstruction_prompt.md  visual_reconstruction_qa.md
tests/: test_cli.py  test_self_evolution_loop.py  test_visual_to_editable_router.py
visual_refs/: README.md
workflows/paper_driven/: experiment_closeout.md  figure_intake.md
workflows/paper_lifecycle/: validation_rules.yaml
workflows/self_evolution_loop/: README.md
workflows/visual_to_editable/: README.md  router_rules.yaml
(+20 files in other folders)
