[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mycevo"
version = "0.2.0"
description = "Evidence-governed self-evolving research workflow harness."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MycEvo maintainers" }]
dependencies = [
  "PyYAML>=6.0",
  "fastmcp>=2.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.scripts]
mycevo = "mycevo.cli:main"
resevo = "mycevo.compat:resevo_main"
researchloop = "mycevo.compat:researchloop_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mycevo = ["resources/workspace/**/*"]
